syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "plugin_image_schema.proto";
import "plugin_divider_schema.proto";
import "plugin_color_schema.proto";

message RicosContent {
    Document doc = 1; // Document root (required)
    Selection selection = 2; // Last saved selection
    string version = 3; // Ricos version used to create this schema (required)
}

message Document {
    repeated Node nodes = 1; // List of nodes (required)
    google.protobuf.Timestamp last_edited = 2; // Timestamp when the document was last edited (required)
}

message Selection {
    string anchor_node = 1; // Selection start node key (required)
    google.protobuf.Int32Value anchor_offset = 2; // Selection start offset (default: 0)
    google.protobuf.StringValue focus_node = 3; // Selection end node key
    google.protobuf.Int32Value focus_offset = 4; // Selection end offset (default: 0)
}

message Node {
    string type = 1; // Node type (required)
    string key = 2; // Node unique indentifier (required)
    repeated Node nodes = 3; // List of child nodes
    oneof data {
        TextData ricos_text = 4;
        ImageData ricos_image = 5;
        DividerData ricos_divider = 6;
    }
}

message TextData {
    string text = 1; // Textual data (required)
    repeated Decoration decorations = 2; // List of decorations
}

// Adds appearence changes to text
message Decoration {
    string type = 1; // Decoration type (required)
    oneof data {
        ColorData ricos_color = 2;
    }
}