syntax = "proto3";

import "../common_enums.proto";

message RicosHeading {
    int32 level = 1 [required = true];
    Common.TextAlignment textAlignment = 2;
}