syntax = "proto3";

package rich_content;

import "common.proto";
import "google/protobuf/wrappers.proto";

message DividerData {
    enum DividerType {
        DOUBLE = 0;
        SINGLE = 1;
        DASHED = 2;
        DOTTED = 3;
    }

    PluginContainerData container_data = 1;
    DividerType type = 2;
}